fix remove comments

--- a/notebooks/projet_equipe_R.ipynb
+++ b/notebooks/projet_equipe_R.ipynb
@@ -1509,12 +1509,12 @@
     "full_train = CSV.read(\"../data/raw/train.csv\", DataFrame; delim=\";\")\n",
     "test =  CSV.read(\"../data/raw/test.csv\", DataFrame; delim=\";\")\n",
     "\n",
-    "Random.seed!(1234) #pour la reproductibilité\n",
+    "Random.seed!(1234) \n",
     "\n",
-    "ntrain = round(Int, .8*nrow(full_train)) #80% des données pour l'entrainement \n",
+    "ntrain = round(Int, .8*nrow(full_train)) \n",
     "\n",
-    "train_id = sample(1:nrow(full_train), ntrain, replace=false, ordered=true) #Échantillonnage aléatoire pour l'entrainement\n",
-    "valid_id = setdiff(1:nrow(full_train), train_id) #Échantillon de validation. On prend les données qui ne sont pas dans l'échantillon d'entrainement\n",
+    "train_id = sample(1:nrow(full_train), ntrain, replace=false, ordered=true)\n",
+    "valid_id = setdiff(1:nrow(full_train), train_id)\n",
     "\n",
     "train = full_train[train_id, :]  \n",
     "valid = full_train[valid_id, :]\n",
@@ -1639,10 +1639,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define categorical columns\n",
     "categorical_cols = [:categorie_vehicule, :transmission, :type, :boite]\n",
     "\n",
-    "# Collect unique levels from the training set\n",
     "levels_dict = Dict()\n",
     "for col in categorical_cols\n",
     "    levels_dict[col] = unique(train[!, col])\n",
@@ -1749,18 +1747,15 @@
     "ŷ_train = GLM.predict(model, train)\n",
     "ŷ_valid = GLM.predict(model, valid)\n",
     "\n",
-    "# Compute the RMSE\n",
     "rmse_train = sqrt(mean((ŷ_train .- train.consommation).^2))\n",
     "rmse_valid = sqrt(mean((ŷ_valid .- valid.consommation).^2))\n",
     "\n",
     "valid.predicted = ŷ_valid\n",
     "\n",
-    "#plot dirstribtuion of residuals\n",
     "residuals = ŷ_valid .- valid.consommation\n",
     "\n",
     "println(\"RMSE on the training set: $rmse_train\")\n",
     "println(\"RMSE on the validation set: $rmse_valid\")\n",
-    "#plot the residuals vs the predicted values\n",
     "s = scatter(ŷ_valid, residuals, title=\"Residuals vs Predicted values\", xlabel=\"Predicted values\", ylabel=\"Residuals\")"
    ]
   },
@@ -1798,7 +1793,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the feature matrix and target vector\n",
     "X_train = Matrix(train[:, Not([:consommation])])\n",
     "y_train = Vector(train.consommation)\n",
     "X_valid = Matrix(valid[:, Not([:consommation])])\n",
