--- a/notebooks/projet_equipe_R.ipynb
+++ b/notebooks/projet_equipe_R.ipynb
@@ -67,14 +67,14 @@
    "outputs": [],
    "source": [
     "full_train = CSV.read(\"../data/raw/train.csv\", DataFrame; delim=\";\")\n",
-    "test =  CSV.read(\"../data/raw/test.csv\", DataFrame; delim=\";\") # ne contient pas la variable \"consommation\"\n",
+    "test =  CSV.read(\"../data/raw/test.csv\", DataFrame; delim=\";\")\n",
     "\n",
-    "Random.seed!(1234) # pour la reproductibilité\n",
+    "Random.seed!(1234)\n",
     "\n",
-    "ntrain = round(Int, .8*nrow(full_train)) # 80% des données pour l'entraînement: 80% * nb de lignes\n",
+    "ntrain = round(Int, .8*nrow(full_train)) \n",
     "\n",
-    "train_id = sample(1:nrow(full_train), ntrain, replace=false, ordered=true) # échantillonnage aléatoire pour l'entraînement\n",
-    "valid_id = setdiff(1:nrow(full_train), train_id) # échantillon de validation ; prend les données qui ne sont pas dans l'échantillon d'entraînement\n",
+    "train_id = sample(1:nrow(full_train), ntrain, replace=false, ordered=true) \n",
+    "valid_id = setdiff(1:nrow(full_train), train_id) \n",
     "\n",
     "train = full_train[train_id, :]  \n",
     "valid = full_train[valid_id, :]"
@@ -271,7 +271,7 @@
     "    return bic\n",
     "end\n",
     "\n",
-    "function compute_bic(X, y)\n",
+    "function compute_bicB(X, y)\n",
     "    beta = (X' * X) \\ (X' * y)\n",
     "    residuals = y - X * beta\n",
     "    ssr = sum(residuals .^ 2) \n",
@@ -315,28 +315,22 @@
     "        for i in 1:p\n",
     "            γ_temp = deepcopy(γ)\n",
     "\n",
-    "            # Option 1: Inclure la variable\n",
     "            γ_temp[i] = 1\n",
     "            X_included = X[:, γ_temp .== 1]\n",
-    "            bic_included = compute_bic(X_included, y)\n",
+    "            bic_included = compute_bicB(X_included, y)\n",
     "\n",
-    "            # Option 2: Exclure la variable\n",
     "            γ_temp[i] = 0\n",
     "            X_excluded = X[:, γ_temp .== 1]\n",
-    "            bic_excluded = compute_bic(X_excluded, y)\n",
+    "            bic_excluded = compute_bicB(X_excluded, y)\n",
     "\n",
-    "            # Calculer θ_i\n",
     "            θ_i = exp(-bic_included) / (exp(-bic_included) + exp(-bic_excluded))\n",
     "\n",
-    "            # Tirer γ_i de Bernoulli(θ_i)\n",
     "            γ[i] = rand() < θ_i ? 1 : 0\n",
     "        end\n",
     "\n",
-    "        # Calculer le BIC pour le modèle courant\n",
     "        X_current = X[:, γ .== 1]\n",
-    "        bic_current = compute_bic(X_current, y)\n",
+    "        bic_current = compute_bicB(X_current, y)\n",
     "\n",
-    "        # Mettre à jour le meilleur modèle\n",
     "        if bic_current < best_bic\n",
     "            best_bic = bic_current\n",
     "            best_model = deepcopy(γ)\n",
@@ -374,13 +368,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# faire une copie initiale du dataframe\n",
     "data = deepcopy(train)\n",
     "\n",
-    "# retirer les colonnes ayant des données vides de notre dataframe\n",
     "data = dropmissing(data)\n",
     "\n",
-    "# procéder au prétraitement par défaut\n",
     "default_prerocessing(data)\n",
     "\n",
     "first(data, 5)"
@@ -731,13 +722,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ajuster un modèle de régression linéaire\n",
     "model = lm(@formula(consommation ~ cylindree), data)\n",
     "\n",
-    "# Prédire les valeurs de consommation pour tracer la ligne\n",
     "data.predicted = predict(model)\n",
     "\n",
-    "# Tracer avec Gadfly\n",
     "p = Gadfly.plot(\n",
     "    data,\n",
     "    x=:cylindree,\n",
@@ -756,7 +744,6 @@
     "\n",
     "println(\"RMSE: \", rmse)\n",
     "\n",
-    "# calcul des résidus\n",
     "res = data.consommation .- data.predicted\n",
     "\n",
     "p1 = Gadfly.plot(\n",
@@ -793,13 +780,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ajuster un modèle de régression linéaire\n",
     "model = lm(@formula(consommation ~ cylindree), data)\n",
     "\n",
-    "# Prédire les valeurs de consommation pour tracer la ligne\n",
     "data.predicted = predict(model)\n",
     "\n",
-    "# Tracer avec Gadfly\n",
     "Gadfly.plot(\n",
     "    data,\n",
     "    x=:cylindree,\n",
@@ -819,14 +803,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# appliquer le logaritme sur la cylindree\n",
     "data.cylindree = log.(data.cylindree)\n",
     "\n",
     "println(\"R²: \", r2(model))\n",
     "rmse = sqrt(mean((data.consommation .- data.predicted).^2))\n",
     "println(\"RMSE: \", rmse)\n",
     "\n",
-    "# calcul des résidus\n",
     "res = data.consommation .- data.predicted\n",
     "\n",
     "p1 = Gadfly.plot(\n",
@@ -1039,11 +1021,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# histogramme de la consommation moyenne en fonction du type de transmission\n",
     "set_default_plot_size(20cm, 20cm)\n",
     "\n",
     "mean_consommation = combine(groupby(data, :transmission), :consommation => mean => :mean_consommation)\n",
-    "# moyenne par type de transmission\n",
     "println(mean_consommation)\n",
     "\n",
     "Gadfly.plot(\n",
@@ -1078,14 +1058,14 @@
    "outputs": [],
    "source": [
     "full_train = CSV.read(\"../data/raw/train.csv\", DataFrame; delim=\";\")\n",
-    "test =  CSV.read(\"../data/raw/test.csv\", DataFrame; delim=\";\") # ne contient pas la variable consommation\n",
+    "test =  CSV.read(\"../data/raw/test.csv\", DataFrame; delim=\";\") \n",
     "\n",
-    "Random.seed!(1234) # pour la reproductibilit\n",
+    "Random.seed!(1234)\n",
     "\n",
-    "ntrain = round(Int, .8*nrow(full_train)) # 80% des données pour l'entrainement: 80% * nb de lignes\n",
+    "ntrain = round(Int, .8*nrow(full_train)) \n",
     "\n",
-    "train_id = sample(1:nrow(full_train), ntrain, replace=false, ordered=true) # échantillonnage aléatoire pour l'entrainement\n",
-    "valid_id = setdiff(1:nrow(full_train), train_id) # échantillon de validation. prend celles qui ne sont pas dans l'échantillon d'entrainement\n",
+    "train_id = sample(1:nrow(full_train), ntrain, replace=false, ordered=true) \n",
+    "valid_id = setdiff(1:nrow(full_train), train_id)\n",
     "\n",
     "train = full_train[train_id, :]  \n",
     "valid = full_train[valid_id, :]"
@@ -1097,33 +1077,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Jeux de données avec 'consommation'\n",
     "datasets_with_consommation = [train, valid]\n",
     "\n",
-    "# Jeux de données sans 'consommation'\n",
     "datasets_without_consommation = [test]\n",
     "\n",
-    "# Remplacer les virgules par des points dans 'cylindree' pour pouvoir convertir en float ensuite\n",
     "for df in [train, valid, test]\n",
     "    df.cylindree = replace.(df.cylindree, \",\" => \".\")\n",
     "end\n",
     "\n",
-    "# Remplacer les virgules par des points dans 'consommation' pour pouvoir convertir en float ensuite\n",
     "for df in datasets_with_consommation\n",
     "    df.consommation = replace.(df.consommation, \",\" => \".\")\n",
     "end\n",
     "\n",
-    "# Convertir 'cylindree' en float dans tous les datasets\n",
     "for df in [train, valid, test]\n",
     "    df.cylindree = safe_parse_float.(df.cylindree)\n",
     "end\n",
     "\n",
-    "# Convertir 'consommation' en float dans les datasets avec 'consommation'\n",
     "for df in datasets_with_consommation\n",
     "    df.consommation = safe_parse_float.(df.consommation)\n",
     "end\n",
     "\n",
-    "# Retirer les valeurs manquantes dans tous les datasets\n",
     "for df in [train, valid, test]\n",
     "    dropmissing!(df)\n",
     "end"
@@ -1137,14 +1110,11 @@
    "source": [
     "counts = combine(groupby(train, :transmission), nrow => :nrow)\n",
     "\n",
-    "# Étape 2: calculer le nombre total d'échantillons et le nombre de classes\n",
     "total_samples = sum(counts.nrow)\n",
     "num_classes = nrow(counts)\n",
     "\n",
-    "# Étape 3: Calculer les poids pour chaque classe\n",
     "counts.Weight = total_samples ./ (num_classes .* counts.nrow)\n",
     "\n",
-    "# Étape 4: Joindre les poids à l'ensemble de données d'entraînement\n",
     "train = leftjoin(train, counts[:, [:transmission, :Weight]], on=:transmission)"
    ]
   },
@@ -1154,10 +1124,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Définir les colonnes catégorielles\n",
     "categorical_cols = [:transmission,:type]\n",
     "\n",
-    "# Créer un dictionnaire pour stocker les niveaux de chaque colonne catégorielle\n",
     "levels_dict = Dict()\n",
     "for col in categorical_cols\n",
     "    levels_dict[col] = unique(train[!, col])\n",
@@ -1183,7 +1151,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ajuster le modèle avec les poids\n",
     "@time modelA = fit(LinearModel, @formula(consommation ~ transmission_propulsion + transmission_traction + transmission_integrale + transmission_4x4), train, wts = train.Weight)"
    ]
   },
@@ -1193,19 +1160,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prédiction avec l'ensemble de validation\n",
     "valid_prediction = GLM.predict(modelA, valid)\n",
     "train_prediction = GLM.predict(modelA, train)\n",
     "\n",
-    "# Trouver la moyenne de prédiction\n",
     "mean_prediction = mean(valid_prediction)\n",
     "mean_prediction_train = mean(train_prediction)\n",
     "\n",
-    "# Remplacer les missing par la moyenne\n",
     "valid_prediction = coalesce.(valid_prediction, mean_prediction)\n",
     "train_prediction = coalesce.(train_prediction, mean_prediction_train)\n",
     "\n",
-    "# Calculer le RMSE\n",
     "rmse_valid = sqrt(mean((valid_prediction - valid.consommation).^2))\n",
     "rmse_train = sqrt(mean((train_prediction - train.consommation).^2))\n",
     "\n",
@@ -1236,14 +1199,14 @@
    "outputs": [],
    "source": [
     "full_train = CSV.read(\"../data/raw/train.csv\", DataFrame; delim=\";\")\n",
-    "test =  CSV.read(\"../data/raw/test.csv\", DataFrame; delim=\";\") # ne contient pas la variable consommation\n",
+    "test =  CSV.read(\"../data/raw/test.csv\", DataFrame; delim=\";\") \n",
     "\n",
-    "Random.seed!(1234) # pour la reproductibilité\n",
+    "Random.seed!(1234) \n",
     "\n",
-    "ntrain = round(Int, .8*nrow(full_train)) # 80% des données pour l'entrainement: 80% * nb de lignes\n",
+    "ntrain = round(Int, .8*nrow(full_train)) \n",
     "\n",
-    "train_id = sample(1:nrow(full_train), ntrain, replace=false, ordered=true) # échantillonnage aléatoire pour l'entrainement\n",
-    "valid_id = setdiff(1:nrow(full_train), train_id) # échantillon de validation. prend celles qui ne sont pas dans l'échantillon d'entrainement\n",
+    "train_id = sample(1:nrow(full_train), ntrain, replace=false, ordered=true) \n",
+    "valid_id = setdiff(1:nrow(full_train), train_id) \n",
     "\n",
     "train = full_train[train_id, :]  \n",
     "valid = full_train[valid_id, :]"
@@ -1258,33 +1221,26 @@
     "train_data = deepcopy(train)\n",
     "valid_data = deepcopy(valid)\n",
     "\n",
-    "# Jeux de données avec 'consommation'\n",
     "datasets_with_consommation = [train_data, valid_data]\n",
     "\n",
-    "# Jeux de données sans 'consommation'\n",
     "datasets_without_consommation = [test]\n",
     "\n",
-    "# Appliquer les remplacements à 'cylindree' uniquement dans les jeux de données qui le contiennent\n",
     "for df in [train_data, valid_data, test]\n",
     "    df.cylindree = replace.(df.cylindree, \",\" => \".\")\n",
     "end\n",
     "\n",
-    "# Appliquer les remplacements à 'consommation' uniquement dans les jeux de données qui le contiennent\n",
     "for df in datasets_with_consommation\n",
     "    df.consommation = replace.(df.consommation, \",\" => \".\")\n",
     "end\n",
     "\n",
-    "# Convertir 'cylindree' en float dans tous les jeux de données\n",
     "for df in [train_data, valid_data, test]\n",
     "    df.cylindree = safe_parse_float.(df.cylindree)\n",
     "end\n",
     "\n",
-    "# Convertir 'consommation' en float dans les jeux de données ayant la colonne 'consommation'\n",
     "for df in datasets_with_consommation\n",
     "    df.consommation = safe_parse_float.(df.consommation)\n",
     "end\n",
     "\n",
-    "# Retirer les valeurs manquantes dans tous les jeux de données\n",
     "for df in [train_data, valid_data, test]\n",
     "    dropmissing!(df)\n",
     "end"
@@ -1296,28 +1252,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fonction pour calculer la moyenne\n",
     "\n",
     "function t_test_equal_variances(group1, group2)\n",
-    "    # Tailles des échantillons\n",
     "    n1 = length(group1)\n",
     "    n2 = length(group2)\n",
     "\n",
-    "    # Moyennes des deux groupes\n",
     "    μ1 = mean(group1)\n",
     "    μ2 = mean(group2)\n",
     "\n",
-    "    # Variances des deux groupes\n",
     "    s1² = var(group1)\n",
     "    s2² = var(group2)\n",
     "\n",
-    "    # Variance combinée pondérée\n",
     "    sp² = ((n1 - 1) * s1² + (n2 - 1) * s2²) / (n1 + n2 - 2)\n",
     "\n",
-    "    # Statistique t\n",
     "    t_stat = (μ1 - μ2) / sqrt(sp² * (1 / n1 + 1 / n2))\n",
     "\n",
-    "    # Degrés de liberté\n",
     "    df = n1 + n2 - 2\n",
     "    \n",
     "    return t_stat, df\n",
@@ -1330,12 +1279,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Exemple d'utilisation\n",
     "group_integrale = train_data[train_data.transmission .== \"integrale\", :consommation]\n",
     "group_4x4 = train_data[train_data.transmission .== \"4x4\", :consommation]\n",
     "\n",
-    "# Calcul du test t\n",
     "t_stat, df = t_test_equal_variances(group_integrale, group_4x4)\n",
     "\n",
     "absolut_t_stat = abs(t_stat)\n",
@@ -1360,8 +1306,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Créer une nouvelle colonne pour les catégories de transmission\n",
-    "# si la transmission est 4x4, la remplacer par \"integrale\"\n",
     "train_data.transmission = ifelse.(train_data.transmission .== \"4x4\", \"integrale\", train_data.transmission)\n",
     "valid_data.transmission = ifelse.(valid_data.transmission .== \"4x4\", \"integrale\", valid_data.transmission)"
    ]
@@ -1372,15 +1316,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# encoder la variable boite\n",
     "for df in [train_data, valid_data, test]\n",
     "    df.boite = ifelse.(df.boite .== \"automatique\", 1.0, 0.0)\n",
     "end\n",
     "\n",
-    "# définir les colonnes catégorielles\n",
     "categorical_cols = [:type, :transmission]\n",
     "\n",
-    "# créer un dictionnaire pour stocker les niveaux de chaque colonne catégorielle\n",
     "levels_dict = Dict()\n",
     "for col in categorical_cols\n",
     "    levels_dict[col] = unique(train_data[!, col])\n",
@@ -1409,16 +1350,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prédiction avec l'ensemble de validation\n",
     "valid_prediction = GLM.predict(modelB, valid_data)\n",
     "\n",
-    "# Trouver la moyenne de prédiction\n",
     "mean_prediction = mean(valid_prediction)\n",
     "\n",
-    "# Remplacer les missing par la moyenne\n",
     "valid_prediction = coalesce.(valid_prediction, mean_prediction)\n",
     "\n",
-    "# Calculer le RMSE\n",
     "rmse_valid = sqrt(mean((valid_prediction - valid_data.consommation).^2))\n",
     "\n",
     "println(\"RMSE: \", rmse_valid)"
@@ -1544,11 +1481,9 @@
     "\n",
     "M = cor(Matrix(data[:, numeric_cols]))\n",
     "\n",
-    "# Afficher la matrice de corrélation\n",
     "println(\"Matrice de corrélation :\")\n",
     "println(M)\n",
     "\n",
-    "# PLOT\n",
     "(n,m) = size(M)\n",
     "heatmap(M, fc=cgrad([:white,:dodgerblue4]), xticks=(1:m,numeric_cols), xrot=90, yticks=(1:m,numeric_cols), yflip=true)\n",
     "annotate!([(j, i, text(round(M[i,j],digits=3), 8,\"Computer Modern\",:black)) for i in 1:n for j in 1:m])"
@@ -2005,40 +1940,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Datasets that contain 'consommation'\n",
     "datasets_with_consommation = [train, valid]\n",
     "\n",
-    "# Datasets without 'consommation'\n",
     "datasets_without_consommation = [test]\n",
     "\n",
-    "# Apply replacements to 'cylindree' in all datasets\n",
     "for df in [train, valid, test]\n",
     "    df.cylindree = replace.(df.cylindree, \",\" => \".\")\n",
     "end\n",
     "\n",
-    "# Apply replacements to 'consommation' only in datasets that have it\n",
     "for df in datasets_with_consommation\n",
     "    df.consommation = replace.(df.consommation, \",\" => \".\")\n",
     "end\n",
     "\n",
-    "# Convert 'cylindree' to float in all datasets\n",
     "for df in [train, valid, test]\n",
     "    df.cylindree = safe_parse_float.(df.cylindree)\n",
     "end\n",
     "\n",
-    "# Convert 'consommation' to float in datasets with 'consommation'\n",
     "for df in datasets_with_consommation\n",
     "    df.consommation = safe_parse_float.(df.consommation)\n",
     "end\n",
     "\n",
-    "\n",
-    "# Drop missing values in all datasets\n",
     "for df in [train, valid, test]\n",
     "    dropmissing!(df)\n",
     "end\n",
     "\n",
-    "# Encode 'boite' column in all datasets\n",
     "for df in [train, valid, test]\n",
     "    df.boite = ifelse.(df.boite .== \"automatique\", 1.0, 0.0)\n",
     "end"
@@ -2280,12 +2205,10 @@
    "source": [
     "y_test_pred = X_test * best_beta\n",
     "\n",
-    "#  Prepare submission DataFrame\n",
     "n_test = size(y_test_pred, 1)\n",
     "id = 1:n_test\n",
     "df_pred = DataFrame(id=id, consommation=y_test_pred)\n",
     "\n",
-    "# Save the predictions to a CSV file\n",
     "name = string(rmse_valid) * \".csv\"\n",
     "CSV.write(\"../submissions/bayes/\" * name, df_pred)\n",
     "println(\"Predictions exported successfully to \" * name * \".\")"
@@ -2394,10 +2317,10 @@
     "\n",
     "Random.seed!(1234)\n",
     "\n",
-    "ntrain = round(Int, .8*nrow(full_train)) #80% des données pour l'entrainement: 80% * nb de lignes\n",
+    "ntrain = round(Int, .8*nrow(full_train)) \n",
     "\n",
-    "train_id = sample(1:nrow(full_train), ntrain, replace=false, ordered=true) #échantillonnage aléatoire pour l'entrainement\n",
-    "valid_id = setdiff(1:nrow(full_train), train_id) #échantillon de validation. prend celles qui ne sont pas dans l'échantillon d'entrainement\n",
+    "train_id = sample(1:nrow(full_train), ntrain, replace=false, ordered=true) \n",
+    "valid_id = setdiff(1:nrow(full_train), train_id) \n",
     "\n",
     "train = full_train[train_id, :]\n",
     "valid = full_train[valid_id, :]\n",
